kio_desktop: don't use QDesktopServices::storageLocation

The method is deprecated and using it can generate build failures (e.g.
with Qt 5.8+ and GCC 7.1+).

BUG: 381566